--- a/src/scss/components/main-footer.scss
+++ b/src/scss/components/main-footer.scss
@@ -5,9 +5,11 @@
     padding-right: 50px;
     padding-top: 50px;
     padding-bottom: 50px;
+    margin-top: 70px;
 
     font-size: 0;
 
+    border-radius: 2px;
     background-color: #046380;
 
     &__text {
