--- a/src/scss/basic.scss
+++ b/src/scss/basic.scss
@@ -17,6 +17,22 @@ body {
 
 main {
     @include container($desktop-width);
+
+    @media screen and (max-width: 1279px) {
+        @include container($small-desktop-width);
+    }
+
+    @media screen and (max-width: 1023px) {
+        @include container($tablet-width);
+    }
+
+    @media screen and (max-width: 767px) {
+        @include container($small-tablet-width);
+    }
+
+    @media screen and (max-width: 439px) {
+        @include container($mobile-width);
+    }
 }
 
 a {
