--- a/src/scss/components/button.scss
+++ b/src/scss/components/button.scss
@@ -11,4 +11,14 @@
     border-radius: 4px;
     color: #ffffff;
     background-color: #046380;
+
+    @media screen and (max-width: 767px) {
+        width: 340px;
+        padding-top: 20px;
+        padding-bottom: 20px;
+    }
+
+    @media screen and (max-width: 439px) {
+        width: 280px;
+    }
 }
