--- a/src/scss/components/contacts.scss
+++ b/src/scss/components/contacts.scss
@@ -3,10 +3,12 @@
         margin-top: 0;
         margin-bottom: 0;
 
-        font-size: 32px;
-        font-weight: 400;
+        a {
+            font-size: 32px;
+            font-weight: 400;
 
-        color: #fefefe;
+            color: #fefefe;
+        }
     }
 
     &__text {
@@ -17,5 +19,29 @@
         font-weight: 400;
 
         color: #fefefe;
+    }
+
+    @media screen and (max-width: 1279px) {
+        &__phone {
+            a {
+                font-size: 28px;
+            }
+        }
+
+        &__text {
+            font-size: 18px;
+        }
+    }
+
+    @media screen and (max-width: 1023px) {
+        &__phone {
+            a {
+                font-size: 22px;
+            }
+        }
+
+        &__text {
+            font-size: 14px;
+        }
     }
 }
