--- a/src/scss/components/main-menu.scss
+++ b/src/scss/components/main-menu.scss
@@ -2,6 +2,10 @@
     padding-left: 2%;
     padding-right: 2%;
 
+    &__hamburger {
+        display: none;
+    }
+
     &__list {
         padding-left: 0;
         margin-top: 0;
@@ -24,6 +28,86 @@
 
         &:not(:last-child) {
             margin-right: 2%;
+        }
+    }
+
+    @media screen and (max-width: 1279px) {
+        &__item {
+            a {
+                font-size: 18px;
+            }
+        }
+    }
+
+    @media screen and (max-width: 1023px) {
+        padding-left: 0;
+        padding-right: 0;
+
+        &__hamburger {
+            display: inline-block;
+
+            border: none;
+            background: none;
+        }
+
+        &__list {
+            position: absolute;
+            top: 89px;
+            left: 0;
+            right: 0;
+            z-index: 2;
+
+            padding-left: 40px;
+            padding-right: 40px;
+            padding-bottom: 40px;
+
+            background-color: #002f2f;
+
+            visibility: hidden;
+        }
+
+        &__list--show {
+            visibility: visible;
+        }
+
+        &__item {
+            position: relative;
+
+            display: block;
+            padding-top: 20px;
+            padding-bottom: 20px;
+
+            &:not(:last-child) {
+                margin-right: 0;
+            }
+
+            &::before {
+                position: absolute;
+                top: 0;
+                left: -2%;
+
+                display: block;
+                width: 104%;
+                height: 1px;
+
+                background-color: #ffffff;
+
+                content: '';
+            }
+
+            &:last-child::after {
+                position: absolute;
+                bottom: 0;
+                left: -2%;
+
+                display: block;
+                width: 104%;
+                height: 1px;
+
+                background-color: #ffffff;
+
+                content: '';
+            }
         }
     }
 }
