--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -1,3 +1,7 @@
 $open-sans: 'Open Sans', sans-serif;
 
 $desktop-width: 1280px;
+$small-desktop-width: 1024px;
+$tablet-width: 768px;
+$small-tablet-width: 440px;
+$mobile-width: 320px;
