Добавил стили для состояний :hover, :active и сделал кастомный :focus

--- a/src/scss/basic.scss
+++ b/src/scss/basic.scss
@@ -15,6 +15,10 @@ body {
     background-color: #faf9ef;
 }
 
+*:focus {
+    outline: 2px solid #fc0;
+}
+
 main {
     @include container($desktop-width);
 
