Добавил кнопку для прокрутки наверх и код для этого + код для валидации формы подписки

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -12,4 +12,5 @@
 @import 'components/main-header.scss';
 @import 'components/main-menu.scss';
 @import 'components/subscribtion-form.scss';
+@import 'components/to-top-button.scss';
 @import 'components/visually-hidden.scss';
