--- a/src/scss/components/apartment-item.scss
+++ b/src/scss/components/apartment-item.scss
@@ -64,7 +64,22 @@
         left: 0;
         right: 0;
 
+        width: 200px;
+        height: 210px;
+        margin-left: auto;
+        margin-right: auto;
+
         text-align: center;
+
+        img {
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            left: 0;
+            right: 0;
+
+            margin: auto;
+        }
     }
 
     &__title {
