--- a/src/scss/components/catalog.scss
+++ b/src/scss/components/catalog.scss
@@ -30,6 +30,40 @@
         color: #002f2f;
     }
 
+    &__sort-type {
+        position: relative;
+
+        margin-left: 10px;
+        margin-right: 35px;
+
+        font-size: 14px;
+        font-weight: 400;
+
+        color: #002f2f;
+        opacity: 0.7;
+
+        &--active {
+            opacity: 1;
+            border-bottom: 1px dotted #849cb2;
+        }
+
+        &--inc::after {
+            position: absolute;
+            right: -25px;
+            top: 1px;
+
+            content: url('../../img/inc.png');
+        }
+
+        &--dec::after {
+            position: absolute;
+            right: -25px;
+            top: 1px;
+
+            content: url('../../img/dec.png');
+        }
+    }
+
     &__apartment-list {
         padding-left: 0;
         margin-top: 0;
